backend/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nbpvm/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000  
          volumeMounts:
            - name: upload-storage 
              mountPath: /app/uploads
          livenessProbe:
              httpGet:
                path: /status
                port: 8000
              initialDelaySeconds: 5
              periodSeconds: 10
          readinessProbe:
              httpGet: 
                path: /status
                port: 8000
              initialDelaySeconds: 5
              periodSeconds: 10  
      volumes:
        - name: upload-storage
          persistentVolumeClaim:
            claimName: upload-pvc

---
apiVersion: v1 
kind: Service
metadata:
  name: app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
